--- a/microsetta_interface/templates/admin_requests_account_removal_list.jinja2
+++ b/microsetta_interface/templates/admin_requests_account_removal_list.jinja2
@@ -50,7 +50,7 @@
             <div class="col-sm" style="text-align: left">
                 <form action="/admin/account_ignore_delete" method="post">
                   <input type="hidden" id="btnIgnore" name="account_id" value="{{ row.account_id }}"/>
-                  <button type=submit" class="btn btn-danger">{{ _('Ignore') }}</button>
+                  <button type="submit" class="btn btn-danger">{{ _('Ignore') }}</button>
                 </form>
             </div>
 
