--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -194,11 +194,13 @@
                       <div id="btn-view-{{ sample.sample_id }}" ></div>
                 </div>
                 <div class="col-sm">
-                {% if sample.ffq and sample.ffq_status == 3 %}
-                    <a class="btn btn-outline-success" href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{sample.ffq}}/reports/topfoodreport">{{ _('View Top Food Report') }}</a>
-                {% else %}
-                    <a class="btn btn-outline-primary" href="/accounts/{{account_id}}/sources/{{source_id}}/samples/{{sample.sample_id}}/survey_templates/{{vioscreen_id}}" onClick="return disable_link(this);">{{ _('Food Frequency Questionnaire') }}</a><span class="fa fa-unchecked"/>
-                {% endif %}  <!-- end of if sample.ffq -->
+                {% if not spain_user %}
+                    {% if sample.ffq and sample.ffq_status == 3 %}
+                        <a class="btn btn-outline-success" href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{sample.ffq}}/reports/topfoodreport">{{ _('View Top Food Report') }}</a>
+                    {% else %}
+                        <a class="btn btn-outline-primary" href="/accounts/{{account_id}}/sources/{{source_id}}/samples/{{sample.sample_id}}/survey_templates/{{vioscreen_id}}" onClick="return disable_link(this);">{{ _('Food Frequency Questionnaire') }}</a><span class="fa fa-unchecked"/>
+                    {% endif %}  <!-- end of if sample.ffq -->
+                {% endif %} <!-- end of if not spain_user -->
                 </div>
                 {% endif %}  <!-- end of if is_human -->
                 <div class="col-sm {% if sample.sample_remove_locked and not admin_mode %}tooltipper{% endif %}" data-title="{{ _('This sample has been received and cannot be removed.') }}">
