--- a/microsetta_interface/templates/submit_interest.jinja2
+++ b/microsetta_interface/templates/submit_interest.jinja2
@@ -548,8 +548,8 @@ $(document).ready(function(){
                         <div class="form-group" id="form_group_address_type">
                            <label for="residential_address" name="residential_address_label">{{ _('Address Type') }}</label>
                            <select id="residential_address" name="residential_address" class="form-control">
-                               <option value="true">Residential</option>
-                               <option value="false">Commercial</option>
+                               <option value="true">{{ _('Residential') }}</option>
+                               <option value="false">{{ _('Commercial') }}</option>
                            </select>
                        </div>
                     </fieldset>
