--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1615,7 +1615,7 @@
                   </div>
               </div>
               <p style='font-style: italic;'>
-                  * No evidence presented here indicates what we’ve observed is clinically dangerous
+                  * {{ _('No evidence presented here indicates what we\'ve observed is clinically dangerous') }}
               </p>
               <hr/>
               <div class="row">
