Confirmation page verbiage change

--- a/microsetta_interface/templates/submit_interest_confirm.jinja2
+++ b/microsetta_interface/templates/submit_interest_confirm.jinja2
@@ -33,7 +33,7 @@
         <h5 class="card-header" style="text-align: center">{{ campaign_info['title'] |e }}</h5>
         {% endif %}
         <div class="card-body">
-            {{ _('Thank you for your interest! Your information has been saved, and we will contact you via email soon.') }}
+            {{ _('Thank you for your interest in our research. Your application has been received. You will receive an email shortly. Please check your junk or spam folder if the email hasn’t reached your inbox.') }}
         </div>
     </div>
 </center>
