--- a/microsetta_interface/templates/new_participant.jinja2
+++ b/microsetta_interface/templates/new_participant.jinja2
@@ -5,15 +5,14 @@
 <script type="text/javascript" src="/static/vendor/js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="/static/vendor/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 <script src="/static/vendor/js/jquery.validate.min.js"></script>
-<script src="/static/vendor/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
     function min_validation(form) {
       // needed because Safari does not honor required flag in inputs, or jquery validate
-      form = document.getElementById(form);
       var valid = true;
+      form = document.getElementById(form);
       if(form.participant_name.value.trim().length == 0) {
         form.participant_name.className += " highlight";
-          valid = false;
+        valid = false;
       }
       if(form.participant_email.value.trim().length == 0) {
         form.participant_email.className += " highlight";
@@ -22,21 +21,10 @@
       return valid;
     }
 
-    function validate18(form) {
-      var valid = min_validation(form);
-      form = document.getElementById(form);
-
-      if(!$("#age18_consent").is(":checked")) {
-        form.age18_consent.className += "highlight";
-        valid = false;
-      }
-      return valid;
-    }
-
-    function validate06(form) {
+    function validate06() {
       // needed because Safari does not honor required flag in inputs, or jquery validate
-      var valid = min_validation(form);
-      form = document.getElementById(form);
+      var valid = min_validation("0-6-form");
+      form = document.getElementById("0-6-form");
       if(form.consent_parent.checked == false) {
         form.consent_parent.className += " highlight";
         valid = false;
@@ -48,10 +36,10 @@
       return valid;
     }
 
-    function validate712(form) {
+    function validate712() {
       // needed because Safari does not honor required flag in inputs, or jquery validate
-      var valid = min_validation(form);
-      form = document.getElementById(form);
+      var valid = min_validation("7-12-form");
+      form = document.getElementById("7-12-form");
       if(form.consent_parent.checked == false) {
         form.consent_parent.className += " highlight";
         valid = false;
@@ -75,10 +63,10 @@
       return valid;
     }
 
-    function validate1317(form) {
+    function validate1317() {
       // needed because Safari does not honor required flag in inputs, or jquery validate
-      var valid = min_validation(form);
-      form = document.getElementById(form);
+      var valid = min_validation("13-17-form");
+      form = document.getElementById("13-17-form");
       if(form.consent_parent.checked == false) {
         form.consent_parent.className += " highlight";
         valid = false;
@@ -111,7 +99,7 @@
         }
     }
 
-    $(document).ready(function(e) {
+    $(document).ready(function() {
         $("#0-6-div").hide();
         $("#7-12-div").hide();
         $("#13-17-div").hide();
@@ -120,60 +108,6 @@
         disableInputOnSubmit("#7-12-form", "#7-12-submit_button", "{{ _('Saving...') }}");
         disableInputOnSubmit("#13-17-form", "#13-17-submit_button", "{{ _('Saving...') }}");
         disableInputOnSubmit("#18-form", "#18-submit_button", "{{ _('Saving...') }}");
-        $("#home_page").click(function(){
-            window.open('{{home_url}}', '_self')
-        })
-        $("#create_source").click(function(){
-            //window.open('{{post_url}}', '_self')
-            //$("#source_modal").modal('hide');
-            $("#"+$(this).attr('form_id'))[0].submit();
-        })
-        $("#18-form, #0-6-form, #7-12-form, #13-17-form").submit(function(e){
-            e.preventDefault();
-            $form_id = $(this).attr('id');
-            if($form_id == "0-6-form"){
-                valid = validate06("0-6-form");
-            } else if ($form_id == "7-12-form") {
-                valid = validate712("7-12-form");
-            } else if ($form_id == "13-17-form") {
-                valid = validate1317("13-17-form")
-            } else if ($form_id == "18-form") {
-                valid = validate18("18-form")
-            }
-
-            var duplicate_source_check_msg = "{{ _('It looks like you are creating a new source that may be similar or the same as an existing source. If this is the same person as an existing source, please consider providing new samples or survey responses under that source') }}"
-
-            if(valid){
-             var name = $('#'+$form_id+'_participant_name').val();
-             var email = $('#'+$form_id+'_participant_email').val();
-                    $.ajax({
-                        url: '{{ duplicate_email_check_url }}',
-                        data:JSON.stringify({participant_name:name, participant_email:email}),
-                        contentType:"application/json",
-                        type: 'POST',
-                        success: function(response){
-                            if(response.error !== undefined){
-                                alert(response.error)
-                            }
-                            if(response.source_duplicate){
-                                  $("#source_msg").empty();
-                                  $("#source_msg").text(duplicate_source_check_msg);
-                                  $("#source_modal").modal('show');
-                                  $("#create_source").attr("form_id", $form_id);
-                                  $("#18-submit_button").attr("value", "I Accept")
-                                  $("#18-submit_button").prop("disabled", false)
-                            } else if (response.error === undefined && !response.source_duplicate) {
-                                $("#"+$form_id)[0].submit();
-                            }
-                        },
-                        error: function(error){
-                            console.log(error);
-                        }
-                    });
-             } else {
-              alert("fill all fields")
-             }
-         });
     });
 </script>
 <style>
@@ -184,6 +118,7 @@
   width: 80%;
   margin: 0 auto;
 }
+
 .required-field {
     color: red;
     display: inline-block;
@@ -198,26 +133,15 @@
 {% if message %}
 <h3 style="color: red">{{message |e}}</h3>
 {% endif %}
-
-{#
-    NOTE on 2022-08-30
-    We're intentionally hiding the under-18 consent options from all non-English users for the time being.
-    The only Spanish-speaking users who should be using this system are THDMI Spain participants, which is only open to adults.
-    As such, a conscious decision was made to not use the resources to translate and implement the under-18 consent/assent documents.
-#}
-
 <div id="age-ranges-div" style='text-align: left;padding: 10px'>
     <h3>{{ tl['SEL_AGE_RANGE'] |e}}</h3>
-    {% if language_tag == "en_US" %}
     <input type='radio' id='age-range-1' name='age-range' value='0-6' onchange="change_consent_div(this)"> <label for='age-range-1'>{{ tl['AGE_0_6'] |e}}</label><br />
     <input type='radio' id='age-range-2' name='age-range' value='7-12' onchange="change_consent_div(this)"> <label for='age-range-2'>{{ tl['AGE_7_12'] |e}}</label><br />
     <input type='radio' id='age-range-3' name='age-range' value='13-17' onchange="change_consent_div(this)"> <label for='age-range-3'>{{ tl['AGE_13_17'] |e}}</label><br />
-    {% endif %}
     <input type='radio' id='age-range-4' name='age-range' value='18-plus' onchange="change_consent_div(this)"> <label for='age-range-4'>{{ tl['AGE_18'] |e}}</label>
     <hr>
 </div>
 
-{% if language_tag == "en_US" %}
 <div id="0-6-div" style='text-align: left;padding: 10px'>
 <div class='scrolltext'>
 {{ tl['CONSENT_YOUR_CHILD'] }}
@@ -227,13 +151,13 @@
     <div class="" id="consent">
         <hr>
         <a href="{{ _('https://oag.ca.gov/sites/all/files/agweb/pdfs/research/bill_of_rights.pdf') }}" target="_blank">{{ tl['BILL_OF_RIGHTS']|e}}</a><br/>
-        <form id="0-6-form" name="consent_info" action="{{ post_url }}" method="post">
+        <form id="0-6-form" name="consent_info" onsubmit="return validate06();" action="{{ post_url }}" method="post">
            <input type="hidden" name="age_range" value="0-6">
            <p><input value="Yes" type="checkbox" name="consent_parent" id="consent_parent" required data-rule-required="true"> {{ tl['TEXT_I_HAVE_READ_PARENT'] |e}} <span class="required-field">*</span></p>
     </div>
     <table>
-        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}</label></td><td><input tabindex="2" type="text" name="participant_name" id="0-6-form_participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
-        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}</td><td><input tabindex="3" type="email"  name="participant_email" id="0-6-form_participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}</label></td><td><input tabindex="2" type="text" name="participant_name" id="participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}</td><td><input tabindex="3" type="email"  name="participant_email" id="participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
         <tr><td>{{ tl['PARTICIPANT_PARENT_1'] |e}}</td><td><input tabindex="7" type="text" name="parent_1_name" id="0-6-form_parent_1_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
         <tr><td>{{ tl['PARTICIPANT_PARENT_2'] |e}}</td><td><input tabindex="8" type="text" name="parent_2_name" id="0-6-form_parent_2_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
         <tr><td>{{ tl['PARTICIPANT_DECEASED_PARENTS'] |e}}</td><td><input  tabindex="9" type="checkbox" name="deceased_parent" id="deceased_parent" value="true" onclick="relax_parents(this)"></td></tr>
@@ -247,13 +171,13 @@
 </div>
     <div class="" id="consent">
         <hr>
-        <form id="7-12-form" name="consent_info" action="{{ post_url }}" method="post">
+        <form id="7-12-form" name="consent_info" onsubmit="return validate712();" action="{{ post_url }}" method="post">
         <input type="hidden" name="age_range" value="7-12">
            <p><input value="Yes" type="checkbox" name="consent_child" id="consent_child" required data-rule-required="true"> {{ tl['TEXT_I_HAVE_READ_SIMPLIFIED'] |e}} <span class="required-field">*</span></p>
     </div>
     <p><table>
-        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}</label></td><td><input tabindex="2" type="text" name="participant_name" id="7-12-form_participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
-        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}</td><td><input tabindex="3" type="email"  name="participant_email" id="7-12-form_participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}</label></td><td><input tabindex="2" type="text" name="participant_name" id="participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}</td><td><input tabindex="3" type="email"  name="participant_email" id="participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
     </table></p>
     <div>
     <h4>{{ tl['PERSON_ATTAINING_ASSENT'] |e}}</h4>
@@ -288,13 +212,13 @@
 </div>
     <div class="" id="consent">
         <hr>
-        <form id="13-17-form" name="consent_info" action="{{ post_url }}" method="post">
+        <form id="13-17-form" name="consent_info" onsubmit="return validate1317();" action="{{ post_url }}" method="post">
            <input type="hidden" name="age_range" value="13-17">
            <p><input value="Yes" type="checkbox" name="consent_child" id="consent_child" required data-rule-required="true"> {{ tl['TEXT_I_HAVE_READ_1'] |e}} <span class="required-field">*</span></p>
     </div>
     <p><table>
-        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}: </label></td><td><input tabindex="2" type="text" name="participant_name" id="13-17-form_participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
-        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}: </td><td><input tabindex="3" type="email"  name="participant_email" id="13-17-form_participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}: </label></td><td><input tabindex="2" type="text" name="participant_name" id="participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}: </td><td><input tabindex="3" type="email"  name="participant_email" id="participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
     </table></p>
     <hr>
     <div class='scrolltext'>
@@ -315,7 +239,6 @@
     </table>
     </form>
 </div>
-{% endif %}
 
 <div id="18-plus-div" style='text-align: left;padding: 10px'>
 <div class='scrolltext'>
@@ -326,38 +249,15 @@
 <div class="" id="consent">
     <hr>
         <a href="{{ _('https://oag.ca.gov/sites/all/files/agweb/pdfs/research/bill_of_rights.pdf') }}" target="_blank">{{ tl['BILL_OF_RIGHTS']|e}}</a><br/>
-        <form id="18-form" name="consent_info" action="{{post_url}}" method="post">
+        <form id="18-form" name="consent_info" onsubmit="return min_validation('18-form');" action="{{ post_url }}" method="post">
         <input type="hidden" name="age_range" value="18-plus">
-           <p><input value="Yes" type="checkbox" name="consent" id="age18_consent" required data-rule-required="true"> {{ tl['TEXT_I_HAVE_READ_1'] |e}} <span class="required-field">*</span></p>
+           <p><input value="Yes" type="checkbox" name="consent" id="consent" required data-rule-required="true"> {{ tl['TEXT_I_HAVE_READ_1'] |e}} <span class="required-field">*</span></p>
     </div>
     <p><table>
-        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}: </label></td><td><input tabindex="2" type="text" name="participant_name" id="18-form_participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
-        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}: </td><td><input tabindex="3" type="email"  name="participant_email" id="18-form_participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}: </label></td><td><input tabindex="2" type="text" name="participant_name" id="participant_name" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
+        <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}: </td><td><input tabindex="3" type="email"  name="participant_email" id="participant_email" required data-rule-required="true"> <span class="required-field">*</span></td></tr>
         <tr><td><input type="submit" id="18-submit_button" value="{{ _('I Accept') }}"></td><td></td></tr>
     </table></p>
     </form>
 </div>
-
-<!-- Modal -->
-<div class="modal fade" id="source_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p id="source_msg"></p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" id="home_page">Return to Home Page</button>
-        <button type="button" class="btn btn-primary" id="create_source">Proceed with Creating New Source</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
 {% endblock %}
