--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -271,16 +271,16 @@
                 <div class="col-3">
                     {{ detail.survey_template_title|e }}
                 </div>
-                <div class="col-7">
+                <div class="col-8">
                     {{ detail.description }}
                 </div>
-                <div class="col-2" style="text-align: right">
+                <div class="col">
                     {% if detail.new_tab %}
                     <a class="btn btn-primary" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
                     {% else %}
                     <a class="btn btn-primary" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}">
                     {% endif %}
-                        {{ _('Start') }}
+                        Start
                     </a>
                 </div>
             </div>
